# PhotoCurate

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_photo_face_center.py  002_add_tile_watermark_options.py  003_add_tile_watermark_options.py  004_add_adobe_lightroom.py
frontend/: .gitignore  Dockerfile  next.config.js  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  theme-wrapper.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: dashboard-shell.tsx
frontend/src/components/layout/: sidebar.tsx  top-bar.tsx
frontend/src/components/sessions/: client-picker.tsx  photo-filters.tsx  photo-grid.tsx  photo-lightbox.tsx  session-card.tsx  (+3 more)
frontend/src/lib/: api.ts  auth-context.tsx  features-context.tsx  theme-context.tsx  utils.ts
src/photocurate/: config.py  main.py
src/photocurate/api/: auth.py  deps.py
src/photocurate/core/: analyzer.py  database.py  delivery.py  queue.py  storage.py
src/photocurate/gallery/: routes.py
src/photocurate/infrastructure/: adobe_lightroom.py  azure_ai_vision.py  azure_blob.py  azure_queue.py  dropbox.py  factory.py  google_drive.py  local_analyzer.py  minio_blob.py  nats_queue.py  onedrive.py
src/photocurate/workers/: autopick.py  delivery.py  image_processing.py  lightroom_sync.py  scoring.py
tests/: conftest.py  test_app.py  test_auth.py  test_auth_routes.py  test_delivery.py  test_gallery_routes.py  test_image_processing.py  test_infrastructure.py  test_schemas.py  test_scoring.py  test_session_routes.py
(+48 files in other folders)
